--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="/index.css" />
+  <link rel="stylesheet" href="/style.css" />
   <script defer src="/bundle.js"></script>
 </head>
 <body>
-
   <div id="app"></div>
 </body>
 </html>
